# CCU

./: Cargo.toml
src/: aggregator.rs  alerts.rs  config.rs  main.rs  parser.rs  settings.rs  storage.rs  tray.rs  types.rs  watcher.rs
src/ui/: bash.rs  behavior.rs  branches.rs  chains.rs  conversation.rs  cost.rs  files.rs  mod.rs  projects.rs  sessions.rs  settings_modal.rs  sparkline.rs  summary.rs  timeline.rs  tools.rs  widgets.rs
