[package]
name = "claude-usage-card"
version = "0.1.0"
edition = "2021"
description = "Desktop widget showing Claude Code usage metrics in real-time"

[dependencies]
eframe = "0.31.1"
notify = "7.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
dirs = "6.0.0"
rusqlite = { version = "0.32", features = ["bundled"] }
notify-rust = "4.12.0"
tray-icon = "0.21"
